<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:contentDescription="@string/TODO" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:contentDescription="@string/todo" />


    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorToolBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/toolbar"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:text="@string/location_name"
        android:textColor="@color/textColor"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:text="@string/skip"
        android:textColor="@color/textColor"
        android:background="@color/colorToolBar"
        android:layout_marginEnd="@dimen/layout_marginRight"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="344dp"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:textColor="@color/textColor"
        />


</RelativeLayout>

