<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.ltq.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.ltq.MainActivity" />

        <RelativeLayout
            android:id="@+id/screen2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/category1"
                android:layout_width="@dimen/button_weight"
                android:layout_height="@dimen/button_hight"
                style="@style/MainButton.background"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/category2"
                android:layout_alignStart="@+id/category2"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shopping"/>

                <TextView
                    style="@style/Text_categoty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/between_icon_category"
                    android:layout_marginTop="@dimen/top_category"
                    android:text="@string/Category1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/category2"
                android:layout_width="@dimen/button_weight"
                android:layout_height="@dimen/button_hight"
                style="@style/MainButton.background"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/category3"
                android:layout_alignStart="@+id/category3"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/star"/>

                <TextView
                    style="@style/Text_categoty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/between_icon_category"
                    android:layout_marginTop="@dimen/top_category"
                    android:text="@string/Category2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category3"
                android:layout_width="@dimen/button_weight"
                android:layout_height="@dimen/button_hight"
                style="@style/MainButton.background"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/seeall"
                android:layout_alignStart="@+id/seeall"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home"/>

                <TextView
                    style="@style/Text_categoty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/between_icon_category"
                    android:layout_marginTop="@dimen/top_category"
                    android:text="@string/Category3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/seeall"
                android:layout_width="@dimen/button_weight"
                android:layout_height="@dimen/button_hight"
                style="@style/MainButton.background"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp">


                <TextView
                    style="@style/Text_categoty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="88dp"
                    android:layout_marginTop="@dimen/top_category"
                    android:text="@string/SeeAll" />

            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/button1"
            style="@style/MainButton.background"
            android:layout_width="@dimen/button_weight"
            android:layout_height="@dimen/button_hight"
            android:layout_above="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_marginBottom="40dp"
            android:text="@string/Continue"
            android:layout_centerHorizontal="true"
            android:elevation="56dp"
            />

        <Button
            android:id="@+id/button2"
            style="@style/MainButton.background"
            android:layout_width="@dimen/button_weight"
            android:layout_height="@dimen/button_hight"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Start_new"
            android:layout_marginBottom="66dp"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>