<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.ltq.ChooseCategory" />


    <LinearLayout
        android:id="@+id/category1"
        android:layout_width="@dimen/button_weight"
        android:layout_height="@dimen/button_hight"
        style="@style/MainButton.background"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/category2"
        android:layout_alignStart="@+id/category2"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shopping"/>

        <TextView
            style="@style/Text_categoty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_icon_category"
            android:layout_marginTop="@dimen/top_category"
            android:textColor="#FFFFFF"
            android:text="@string/Category1" />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/category2"
        android:layout_width="@dimen/button_weight"
        android:layout_height="@dimen/button_hight"
        style="@style/MainButton.background"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/category3"
        android:layout_alignStart="@+id/category3"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/star"/>

        <TextView
            style="@style/Text_categoty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_icon_category"
            android:layout_marginTop="@dimen/top_category"
            android:textColor="#FFFFFF"
            android:text="@string/Category2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category3"
        android:layout_width="@dimen/button_weight"
        android:layout_height="@dimen/button_hight"
        style="@style/MainButton.background"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/seeall"
        android:layout_alignStart="@+id/seeall"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/home"/>

        <TextView
            style="@style/Text_categoty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_icon_category"
            android:layout_marginTop="@dimen/top_category"
            android:textColor="#FFFFFF"
            android:text="@string/Category3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seeall"
        android:layout_width="@dimen/button_weight"
        android:layout_height="@dimen/button_hight"
        style="@style/MainButton.background"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp">


        <TextView
            style="@style/Text_categoty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="@dimen/top_category"
            android:textColor="#FFFFFF"
            android:text="@string/SeeAll" />

    </LinearLayout>



</RelativeLayout>
